# ESPCooling

./: .gitignore  README.md
ESP32/: CMakeLists.txt  platformio.ini
ESP32/src/: fan.hpp  main.cpp  serial.hpp
Qt/: .gitignore  CMakeLists.txt  Cooling.pro  connect.ui  connectiondialog.ui  mainwindow.ui  resources.qrc  resources.rcc
Qt/include/: aboutdialog.h  connectiondialog.h  data_types.hpp  hid_interface.hpp  mainwindow.h  profile_dialog.hpp  serial.hpp  thread.hpp  types.h
Qt/resources/: resources.qrc
Qt/src/: aboutdialog.cpp  connectiondialog.cpp  hid_interface.cpp  main.cpp  mainwindow.cpp  profile_dialog.cpp  serial.cpp  thread.cpp  thread.hpp
Qt/uic/: aboutdialog.ui  connectiondialog.ui  mainwindow.ui  palette.xml  profile_dialog.ui
