cmake_minimum_required(VERSION 3.5)
project(Cooling LANGUAGES CXX)


set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_AUTOUIC_SEARCH_PATHS uic)
set(AUTORCC_EXECUTABLE resources/resources.qrc)


find_package(Qt5Widgets)
find_package(Qt5SerialPort)

set(SOURCES
    src/main.cpp
    src/mainwindow.cpp
    src/connectiondialog.cpp
    src/aboutdialog.cpp
    src/serial.cpp
)

set(HEADERS
    include/mainwindow.h
    include/connectiondialog.h
    include/aboutdialog.h
    include/serial.hpp
)


set(UIS
    uic/mainwindow.ui
    uic/connectiondialog.ui
    uic/aboutdialog.ui
)


qt5_add_resources(SOURCES resources/resources.qrc)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} ${UIS})
target_include_directories(${PROJECT_NAME} PUBLIC include ui)

target_link_libraries(Cooling 
Qt5::Widgets 
Qt5::SerialPort
)